--- a/src/renderer/components/helpers/ProgressSpinner.scss
+++ b/src/renderer/components/helpers/ProgressSpinner.scss
@@ -8,15 +8,18 @@
 
   &-wrapper {
     display: flex;
-    position: fixed;
-    z-index: 100;
-    background-color: rgba(0,0,0,0.3);
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
     align-items: center;
     justify-content: center;
+
+    &:not(&-inline) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      z-index: 100;
+      background-color: rgba(0,0,0,0.3);
+    }
   }
 }
 
