--- a/src/renderer/components/areas/HostArea.scss
+++ b/src/renderer/components/areas/HostArea.scss
@@ -1,7 +1,6 @@
-.host-view {
+.host-area {
   display: flex;
   flex-direction: column;
-  background-color: #24997e;
+  align-items: stretch;
   flex: 1 1 auto;
-  overflow-y: auto;
 }
