--- a/src/renderer/components/panels/ConsolePanel.scss
+++ b/src/renderer/components/panels/ConsolePanel.scss
@@ -8,6 +8,7 @@
     margin: 1rem 0;
     background: black;
     color: white;
+    overflow-y: auto;
     padding: 0.6rem;
     border-radius: 0.6rem;
     border: 1px solid rgba(255,255,255,0.4);
