player position updates

--- a/src/renderer/components/panels/ServerPanel.scss
+++ b/src/renderer/components/panels/ServerPanel.scss
@@ -37,6 +37,10 @@
       border-radius: 0 0 10px 10px;
     }
 
+    &-radar {
+      flex: 0 0 160px;
+    }
+
     &-playerlist {
       display: flex;
       flex: 1 1 100px;
