--- a/src/renderer/components/panels/RadarPanel.scss
+++ b/src/renderer/components/panels/RadarPanel.scss
@@ -3,4 +3,19 @@
   max-width: 180px;
   min-height: 180px;
   max-height: 180px;
+
+  &-icon {
+    max-width: 100%;
+    max-height: 100%;
+
+    &-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      border-radius: 50%;
+      position: absolute;
+      background-color: #d04444;
+    }
+  }
 }
