--- a/src/renderer/components/panels/RadarPanel.scss
+++ b/src/renderer/components/panels/RadarPanel.scss
@@ -1,9 +1,4 @@
 .radar-panel {
-  min-width: 180px;
-  max-width: 180px;
-  min-height: 180px;
-  max-height: 180px;
-
   &-icon {
     max-width: 100%;
     max-height: 100%;
@@ -25,5 +20,43 @@
     font-size: 10px;
     border: 1px solid rgba(0, 0, 0, 0.4)    ;
     white-space: pre;
+  }
+
+  &-range {
+    width: calc(100% - 8px);
+    margin: 4px;
+    -webkit-appearance: none;
+    background: transparent;
+
+
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      border: 1px solid #000000;
+      height: 24px;
+      width: 12px;
+      border-radius: 3px;
+      background: #ffffff;
+      cursor: pointer;
+      margin-top: -8px;
+      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    }
+
+    &::-webkit-slider-runnable-track {
+      width: 100%;
+      height: 8.4px;
+      cursor: pointer;
+      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+      background: #3071a9;
+      border-radius: 1.3px;
+      border: 0.2px solid #010101;
+    }
+
+    &:focus::-webkit-slider-runnable-track {
+      background: #367ebd;
+    }
+
+    &:focus {
+      outline: none;
+    }
   }
 }
