--- a/src/renderer/components/panels/RadarPanel.scss
+++ b/src/renderer/components/panels/RadarPanel.scss
@@ -1,7 +1,7 @@
 .radar-panel {
   &-icon {
-    max-width: 100%;
-    max-height: 100%;
+    // max-width: 100%;
+    // max-height: 100%;
 
     &-wrapper {
       display: flex;
