--- a/src/renderer/components/panels/RadarPanel.scss
+++ b/src/renderer/components/panels/RadarPanel.scss
@@ -1,8 +1,7 @@
 .radar-panel {
-  &-icon {
-    // max-width: 100%;
-    // max-height: 100%;
+  margin: 6px 12px;
 
+  &-icon {
     &-wrapper {
       display: flex;
       align-items: center;
