--- a/src/renderer/components/views/SettingsView.scss
+++ b/src/renderer/components/views/SettingsView.scss
@@ -1,3 +1,37 @@
-.gap {
-  flex: 1 0 10px;
+.settings-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  flex: 1 0 auto;
+  padding: 40px;
+  background-color: #24997e;
+  font-size: 18px;
+  overflow: auto;
+  color: #000;
+
+  > * {
+    margin: 10px 0;
+    flex: 0
+  }
+
+  &-hotkeys {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+
+    > * {
+      margin: 2px 4px;
+    }
+  }
+
+  &-sortable-list {
+    display: flex;
+    flex-direction: column;
+    
+    > * {
+      margin: 2px 0;
+    }
+  }
 }
