--- a/src/renderer/components/views/SettingsView.scss
+++ b/src/renderer/components/views/SettingsView.scss
@@ -1,18 +1,30 @@
 .settings-view {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  align-items: stretch;
   flex: 1 0 auto;
   padding: 40px;
   background-color: #24997e;
   font-size: 18px;
-  overflow: auto;
   color: #000;
+  height: 0%;
 
-  > * {
-    margin: 10px 0;
-    flex: 0
+  &-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 auto;
+    overflow: auto;
+    max-height: 100%;
+
+    > * {
+      margin: 10px 0;
+      flex: 0 0 auto;
+    }
+  }
+
+  &-save {
+    flex: 0 0 auto;
   }
 
   &-setting {
